Added API to update task.
